--- a/testing-stuff/index.html
+++ b/testing-stuff/index.html
@@ -6,6 +6,6 @@
     <title>Geography stuff</title>
   </head>
   <body>
-    this should be some place to test css honestly dont know why i wrote "geography stuff" there
+    this should be some place to test css honestly dont know why i wrote "geography stuff" there, just testing adding stuff
   </body>
 </html>
