--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dump site</title>
+    <title>Plum test</title>
   </head>
   <body>
     <h1>Welcome</h1>
     <p>Line trivia game</p>
     <a href="./line-trivia/version-0.1">Version 0.1</a><br />
-    <a href="./line-trivia/version-0.2">Version 0.2</a>
+    <a href="./line-trivia/version-0.2">Version 0.2</a><br />
+    <a href="line-trivia/version-0.3/">Version 0.3</a>
   </body>
 </html>
