--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Line trivia game</p>
     <a href="./line-trivia/version-0.1">Version 0.1</a><br />
     <a href="./line-trivia/version-0.2">Version 0.2</a><br />
-    <a href="line-trivia/version-0.3/">Version 0.3</a>
+    <a href="./line-trivia/version-0.3/">Version 0.3</a>
   </body>
 </html>
