--- a/testing-stuff/index.html
+++ b/testing-stuff/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <script src="./index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geography stuff</title>
   </head>
