Finished Day Trams DB, Made Day Trams DB Accessible

--- a/line-trivia/database/index.html
+++ b/line-trivia/database/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <!-- Měl bych tohle trochu překopat -->
-    <str id="stringLinesDB">Wait</str>
+    <str>Open console</str>
+    <div class="database">
+      <button id="prevLine">Previous Line</button>
+      <button id="nextLine">Next Line</button><br />
+      <button id="prevSt">Previous Station</button>
+      <button id="nextSt">Next Station</button>
+    </div>
   </body>
 </html>
