--- a/line-trivia/version-0.4 wip/index.html
+++ b/line-trivia/version-0.4 wip/index.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="./index.js" type="module"></script>
+    <script src="./functions/checkForAnswers.js" type="module"></script>
+    <script src="./functions/updateAnswers.js" type="module"></script>
+    <script src="../database/linesDB.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.6/underscore-esm-min.js" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lines trivia</title>
