this should atleast work

--- a/line-trivia/version-0.4 wip/index.html
+++ b/line-trivia/version-0.4 wip/index.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="./index.js" type="module"></script>
     <script src="./functions/checkForAnswers.js" type="module"></script>
-    <script src="./functions/updateAnswers.js" type="module"></script>
     <script src="../database/linesDB.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.6/underscore-esm-min.js" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +16,7 @@
         <str id="guessed-no"></str>
       </div>
       <div class="inputs">
-        <input id="user-input" type="text" disabled placeholder="Enter" />
+        <input id="user-input" type="text" placeholder="Enter" />
         <button id="enter-btn" type="button">Enter</button>
         <button id="roll-btn" type="button">Roll line</button>
         <button id="reset-btn" type="button">Reset</button><br />
