Added a database line view

--- a/line-trivia/test/test.html
+++ b/line-trivia/test/test.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="cs">
   <head>
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./test.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lines trivia</title>
   </head>
   <body>
     <!-- Měl bych tohle trochu překopat -->
-    <div id="database" style="float: left; width: 300px">
-      <str>Open console</str><br />
+    <div id="database" style="float:left; width:300px">
+      <str>Open console</str></br>
       <button id="prevLine">Previous Line</button>
       <button id="nextLine">Next Line</button><br />
       <button id="prevSt">Previous Station</button>
       <button id="nextSt">Next Station</button>
     </div>
-    <div id="view" style="float: left; width: 300px"></div>
-    <script src="./index.js" type="module"></script>
+    <div id="view" style="float:left; width:300px"></div>
+    <script src="./test.js"></script>s
   </body>
 </html>
