Main game functional, database to be worked on

--- a/line-trivia/version-0.4 wip/index.html
+++ b/line-trivia/version-0.4 wip/index.html
@@ -15,7 +15,7 @@
         <input id="user-input" type="text" placeholder="Enter" />
         <button id="enter-btn" type="button">Enter</button>
         <button id="roll-btn" type="button">Roll line</button>
-        <button id="reset-btn" type="button">Reset</button><br />
+        <button id="hint-btn" type="button" disabled>Hint</button>
       </div>
       <div class="choosing" style="width: 200px; height: auto">
         <p>Select lines to include</p>
