--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="./line-trivia/version-0.1">Version 0.1</a><br />
     <a href="./line-trivia/version-0.2">Version 0.2</a><br />
     <a href="./line-trivia/version-0.3/">Version 0.3</a><br />
-    <a href="./line-trivia/version-0.4/">Version 0.4</a>
+    <a href="./line-trivia/version-0.4/">Version 0.4</a><br />
+    <a href="./line-trivia/version-0.5/">Version 0.5</a>
   </body>
 </html>
