Added lineRouteID generation, a few qol changes

--- a/line-trivia/version-0.5/index.html
+++ b/line-trivia/version-0.5/index.html
@@ -24,7 +24,7 @@
         <label for="ch-btn2" class="choose-lab">Future metro lines</label><br />
         <input id="ch-btn3" class="choose-btn" type="checkbox" value="tramLines" name="linesIncl[]" />
         <label for="ch-btn3" class="choose-lab">Day tram lines</label><br />
-        <input id="ch-btn4" class="choose-btn" type="checkbox" value="tramLinesSpecial" name="linesIncl[]" disabled />
+        <input id="ch-btn4" class="choose-btn" type="checkbox" value="specialTramLines" name="linesIncl[]" disabled />
         <label for="ch-btn4" class="choose-lab wip">Special tram lines</label><br />
         <input id="ch-btn5" class="choose-btn" type="checkbox" value="nightTramLines" name="linesIncl[]" />
         <label for="ch-btn5" class="choose-lab">Night tram lines</label><br />
@@ -32,11 +32,11 @@
         <label for="ch-btn6" class="choose-lab">Trolleybus lines</label><br />
         <input id="ch-btn7" class="choose-btn" type="checkbox" value="busLines" name="linesIncl[]" />
         <label for="ch-btn7" class="choose-lab">Day bus lines</label><br />
-        <input id="ch-btn8" class="choose-btn" type="checkbox" value="busLinesNight" name="linesIncl[]" disabled />
+        <input id="ch-btn8" class="choose-btn" type="checkbox" value="nightBusLines" name="linesIncl[]" disabled />
         <label for="ch-btn8" class="choose-lab wip">Night bus lines</label><br />
-        <input id="ch-btn9" class="choose-btn" type="checkbox" value="rBusLinesDay" name="linesIncl[]" disabled />
+        <input id="ch-btn9" class="choose-btn" type="checkbox" value="regionalBusLines" name="linesIncl[]" disabled />
         <label for="ch-btn9" class="choose-lab wip">Regional day bus lines</label><br />
-        <input id="ch-btn10" class="choose-btn" type="checkbox" value="rBusLinesNight" name="linesIncl[]" disabled />
+        <input id="ch-btn10" class="choose-btn" type="checkbox" value="regionalNightBusLines" name="linesIncl[]" disabled />
         <label for="ch-btn10" class="choose-lab wip">Regional night bus lines</label><br />
         <input id="ch-btn11" class="choose-btn" type="checkbox" value="formerLines" name="linesIncl[]" />
         <label for="ch-btn11" class="choose-lab">Former lines</label>
