Added title image to version 0.5

--- a/line-trivia/version-0.5/index.html
+++ b/line-trivia/version-0.5/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lines trivia</title>
+    <link rel="icon" type="image/png" href="../pictures/MidStation.png" />
   </head>
   <body>
     <div id="game" style="height: auto">
