Grouped instruction spans into a paragraph

--- a/line-trivia/version-0.5/index.html
+++ b/line-trivia/version-0.5/index.html
@@ -9,8 +9,7 @@
   <body>
     <div id="game" style="height: auto">
       <div id="communication" style="height: auto; width: 400px">
-        <span id="instructions">Roll a line</span>
-        <span id="answer-counter"></span>
+        <p><span id="instructions">Roll a line</span> <span id="answer-counter"></span></p>
       </div>
       <div id="inputs" style="height: 25px; width: 400px">
         <input id="user-input" type="text" placeholder="Enter" />
